--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
   "name": "muff-task-manager-backend",
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4",
+    "morgan": "^1.10.0"
+  }
 }
