--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "packageManager": "yarn@3.2.3",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.5.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
