updated example.env --- added new environment variables for passport OAuth strategies

--- a/example.env
+++ b/example.env
@@ -4,7 +4,13 @@ APP_ENV=
 #--------------------------------#
 
 #----- MANDATORY DATABASE SETTINGS -----#
-DATABASE_NAME=
+DATABASE_CLUSTER=
 DATABASE_USER=
 DATABASE_PASSWORD=
 #---------------------------------------#
+
+#----- PASSPORT CONFIGURATION -----#
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+#----------------------------------#
