Updated example.env, added new environment variables

--- a/example.env
+++ b/example.env
@@ -3,6 +3,11 @@ PORT=
 APP_ENV=
 #--------------------------------#
 
+#----- SESSION CONFIGURATION -----#
+SESSION_SECRET=
+SESSION_COOKIE=
+#---------------------------------#
+
 #----- MANDATORY DATABASE SETTINGS -----#
 DATABASE_CLUSTER=
 DATABASE_USER=
